# act-starryos-qemu-infer

./: .gitignore  Proj57任务三报告.docx  Proj57任务三报告.md  README.md  _weight_map.csv  final_summary_cn.py  generate_inference_report.py  inference_results_summary.json  inference_results_summary.md  inference_summary.py
artifacts/onnx_quant/: closed_loop_quant_eval.json  closed_loop_quant_eval.md
deploy/: SG2002.md
deploy/cpp_onnxruntime/: CMakeLists.txt  DELIVERABLE.md  LIMITATIONS.md  README.md  deploy_to_starryos_rootfs.sh  run_starryos_benchmark.sh
deploy/cpp_onnxruntime/config/: act_params.json
deploy/cpp_onnxruntime/data/: eval_manifest.csv
deploy/cpp_onnxruntime/src/: act_ort_infer.cpp
docs/: Proj57任务三报告.md
models/: README.md
qemu_model_runs/: QEMU_INFERENCE_REPORT.md
results/: frame_000007_starryos_single_infer.json  frame_000007_starryos_single_infer.md
starryos_patches/: README.md
starryos_patches/kernel/src/pseudofs/: proc.rs
starryos_patches/kernel/src/task/: stat.rs
tools/: make_cpp_eval_manifest.py  run_qemu_selected_models.py  run_qemu_selected_models_nc.sh  update_task3_report_per_frame.py
